# exp-golomb

./: Cargo.toml  README.md
src/: decoder.rs  encoder.rs  lib.rs
tests/: encode_decode.rs
